# CG

./: CMakeLists.txt  README.md
Engine/: main.cpp
Fase1/: CMakeLists.txt  exemplo.xml  exemplo1.xml  exemplo2.xml  exemplo3.xml
Fase1/Engine/: main.cpp
Fase1/GENERATOR/: box.h  cylinder.cpp  cylinder.h  sphere.h  torus.cpp
Fase1/files3d/: box.3d  cone.3d  cylinder.3d  torus.3d
Fase1/src/: Shape.h
Fase2/: CMakeLists.txt  exemplo.xml  exemplo1.xml  ss.xml
Fase2/Engine/: main.cpp
Fase2/GENERATOR/: cone.cpp  cone.h  main.cpp
Fase2/files3d/: ring.3d  sphere.3d  torus.3d
Fase2/src/: Action.cpp  Action.h  Group.cpp  Group.h  Point.cpp  Point.h  Shape.cpp  Shape.h
Fase3/: CMakeLists.txt  foguetao.xml  nave.xml  solarsystem.xml  teatime.xml
Fase3/Engine/: main.cpp
Fase3/GENERATOR/: bezier.cpp  bezier.h  main.cpp  torus.h
Fase3/files3d/: cintura.3d  coneship.3d  cylindership.3d  plane.3d  sphere.3d  sphereship.3d  sun.3d  teacup.3d  teaspoon.3d  toruship.3d
Fase3/src/: Action.cpp  Action.h  Group.cpp  Group.h  Shape.cpp  Shape.h
Fase4/: CMakeLists.txt  exemplo1.xml  solarsystemlights.xml
Fase4/Engine/: main.cpp
Fase4/GENERATOR/: bezier.cpp  box.cpp  cylinder.cpp  main.cpp  plane.cpp  sphere.cpp  torus.cpp
Fase4/files3d/: box.3d  cintura.3d  cylinder.3d  plane.3d  ring.3d  sphere.3d  sun.3d  teacup.3d  teapot.3d  teaspoon.3d  torus.3d
Fase4/src/: Action.cpp  Group.cpp  Group.h  Light.cpp  Light.h  Material.cpp  Material.h  Point.cpp  Point.h  Shape.cpp  Shape.h
GENERATOR/: box.cpp  cone.cpp  cylinder.cpp  main.cpp  plane.cpp  plane.h  sphere.cpp  torus.cpp
files3d/: cone.3d  plane.3d  sphere.3d
src/: Point.cpp  Shape.cpp
